--- a/share/man/man5/port-modules.5
+++ b/share/man/man5/port-modules.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: port-modules.5,v 1.82 2010/12/03 11:53:24 ajacoutot Exp $
+.\"	$OpenBSD: port-modules.5,v 1.86 2010/12/06 10:02:14 espie Exp $
 .\"
 .\" Copyright (c) 2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: December 3 2010 $
+.Dd $Mdocdate: December 6 2010 $
 .Dt PORT-MODULES 5
 .Os
 .Sh NAME
@@ -365,6 +365,15 @@ post-install:
 	${MODCPAN_POST_INSTALL}
 .Ed
 .It devel/cmake
+.It devel/dconf
+Sets CONFIGURE_ARGS, BUILD_DEPENDS and RUN_DEPENDS.
+This module is used by ports installing gsettings schemas under
+.Pa ${PREFIX}/share/glib-2.0/schemas/ .
+It requires the following goo in the PLIST:
+.Bd -literal -offset indent
+@exec %D/bin/glib-compile-schemas %D/share/glib-2.0/schemas
+@unexec-delete %D/bin/glib-compile-schemas %D/share/glib-2.0/schemas
+.Ed
 .It devel/gconf2
 A link from
 .Xr gconftool-2 1
