--- a/share/man/man5/login.conf.5
+++ b/share/man/man5/login.conf.5
@@ -30,10 +30,10 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $OpenBSD: login.conf.5,v 1.44 2010/09/30 21:00:47 sthen Exp $
+.\" $OpenBSD: login.conf.5,v 1.45 2010/12/03 12:39:19 millert Exp $
 .\" BSDI $From: login.conf.5,v 2.20 2000/06/26 14:50:38 prb Exp $
 .\"
-.Dd $Mdocdate: September 30 2010 $
+.Dd $Mdocdate: December 3 2010 $
 .Dt LOGIN.CONF 5
 .Os
 .Sh NAME
@@ -412,7 +412,8 @@ It may have a trailing
 .Li b ,
 .Li k ,
 .Li m ,
-.Li g or
+.Li g
+or
 .Li t
 to indicate that the value is in 512-byte blocks,
 kilobytes, megabytes, gigabytes, or terrabytes, respectively.
