--- a/share/man/man5/port-modules.5
+++ b/share/man/man5/port-modules.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: port-modules.5,v 1.86 2010/12/06 10:02:14 espie Exp $
+.\"	$OpenBSD: port-modules.5,v 1.87 2011/03/25 09:28:30 ajacoutot Exp $
 .\"
 .\" Copyright (c) 2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: December 6 2010 $
+.Dd $Mdocdate: March 25 2011 $
 .Dt PORT-MODULES 5
 .Os
 .Sh NAME
@@ -240,8 +240,7 @@ The following variables can be overridden in a relatively safe fashion:
 .Ev SEPARATE_BUILD ,
 .Ev SHARED_ONLY ,
 .Ev USE_GMAKE ,
-.Ev USE_LIBTOOL ,
-.Ev USE_MOTIF .
+.Ev USE_LIBTOOL .
 .Pp
 The following variables can be added to in a relatively safe fashion:
 .Ev BUILD_DEPENDS ,
