--- a/bin/ksh/sh.1
+++ b/bin/ksh/sh.1
@@ -1,8 +1,8 @@
-.\"	$OpenBSD: sh.1,v 1.88 2010/09/18 19:25:05 jmc Exp $
+.\"	$OpenBSD: sh.1,v 1.89 2010/09/20 07:41:17 jmc Exp $
 .\"
 .\"	Public Domain
 .\"
-.Dd $Mdocdate: September 18 2010 $
+.Dd $Mdocdate: September 20 2010 $
 .Dt SH 1
 .Os
 .Sh NAME
@@ -13,12 +13,7 @@
 .Bk -words
 .Op Fl +abCefhiklmnpruvXx
 .Op Fl +o Ar option
-.Oo
-.Fl c Ar string \*(Ba
-.Fl s \*(Ba
-.Ar file
-.Op Ar argument ...
-.Oc
+.Op Fl c Ar string \*(Ba Fl s \*(Ba Ar file Op Ar argument ...
 .Ek
 .Sh DESCRIPTION
 .Nm
