--- a/share/man/man7/hier.7
+++ b/share/man/man7/hier.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hier.7,v 1.92 2010/10/31 23:57:17 jmc Exp $
+.\"	$OpenBSD: hier.7,v 1.93 2011/04/05 12:50:15 guenther Exp $
 .\"	$NetBSD: hier.7,v 1.7 1994/11/30 19:07:10 jtc Exp $
 .\"
 .\" Copyright (c) 1990, 1993
@@ -30,7 +30,7 @@
 .\"
 .\"	@(#)hier.7	8.1 (Berkeley) 6/5/93
 .\"
-.Dd $Mdocdate: October 31 2010 $
+.Dd $Mdocdate: April 5 2011 $
 .Dt HIER 7
 .Os
 .Sh NAME
@@ -411,6 +411,10 @@ Miscellaneous documentation.
 .Bl -tag -width html/ -compact
 .It html/
 HTML documentation.
+.It mg/
+Tutorial for the
+.Xr mg 1
+editor.
 .El
 .Pp
 .It games/
