--- a/share/man/man4/man4.sgi/power.4
+++ b/share/man/man4/man4.sgi/power.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: power.4,v 1.2 2008/03/24 14:34:27 jsing Exp $
+.\"     $OpenBSD: power.4,v 1.3 2009/10/26 18:38:09 miod Exp $
 .\"
 .\" Copyright (c) 2007 Jasper Lievisse Adriaanse <jasper@openbsd.org>
 .\" All rights reserved.
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: March 24 2008 $
+.Dd $Mdocdate: October 26 2009 $
 .Dt POWER 4 sgi
 .Os
 .Sh NAME
@@ -31,7 +31,7 @@ The
 .Nm
 driver catches that interrupt.
 If the
-.Va machdep.kbdreset
+.Va hw.allowpowerdown
 .Xr sysctl 8
 is set to 1,
 .Nm
