--- a/sbin/ipsecctl/ipsec.conf.5
+++ b/sbin/ipsecctl/ipsec.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ipsec.conf.5,v 1.131 2011/06/24 21:10:16 sthen Exp $
+.\"	$OpenBSD: ipsec.conf.5,v 1.132 2011/06/24 21:11:27 sthen Exp $
 .\"
 .\" Copyright (c) 2004 Mathieu Sauve-Frankel  All rights reserved.
 .\"
@@ -818,8 +818,8 @@ The following rules enter SAs in the SADB:
 Enter an ESP SA.
 .It Ic ah
 Enter an AH SA.
-.\".It Ic ipcomp
-.\"Enter an IPCOMP SA.
+.It Ic ipcomp
+Enter an IPCOMP SA.
 .It Ic ipip
 Enter an IPIP pseudo SA.
 .It Ic tcpmd5
@@ -942,7 +942,7 @@ and
 .Sh SEE ALSO
 .Xr openssl 1 ,
 .Xr enc 4 ,
-.\".Xr ipcomp 4 ,
+.Xr ipcomp 4 ,
 .Xr ipsec 4 ,
 .Xr tcp 4 ,
 .Xr pf.conf 5 ,
