--- a/share/man/man5/hostname.if.5
+++ b/share/man/man5/hostname.if.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hostname.if.5,v 1.54 2009/12/10 00:51:55 todd Exp $
+.\"	$OpenBSD: hostname.if.5,v 1.55 2009/12/10 22:04:59 deraadt Exp $
 .\"	$NetBSD: hosts.5,v 1.4 1994/11/30 19:31:20 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -192,7 +192,12 @@ the interface, such as 64.
 Comments are allowed.
 Anything following a comment character is treated as a comment.
 .It Li \&! Ns Ar command-line
-Arbitrary shell commands can be executed using this directive.
+Arbitrary shell commands can be executed using this directive, as
+long as they are available in the single-user environment (for
+instance,
+.Pa /bin
+or
+.Pa /sbin ) .
 Useful for doing interface-specific configuration such as
 setting up custom routes using
 .Xr route 8
