--- a/share/man/man7/mdoc.7
+++ b/share/man/man7/mdoc.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mdoc.7,v 1.72 2011/07/15 10:28:35 schwarze Exp $
+.\"	$OpenBSD: mdoc.7,v 1.73 2011/07/15 20:34:34 schwarze Exp $
 .\"
 .\" Copyright (c) 2009, 2010, 2011 Kristaps Dzonsons <kristaps@bsd.lv>
 .\" Copyright (c) 2010 Ingo Schwarze <schwarze@openbsd.org>
@@ -1039,6 +1039,8 @@ Accepts one optional argument:
 .It Cm v[1-7] | 32v
 A version of
 .At .
+.It Cm III
+.At III .
 .It Cm V[.[1-4]]?
 A version of
 .At V .
@@ -1048,6 +1050,7 @@ Note that these arguments do not begin with a hyphen.
 .Pp
 Examples:
 .Dl \&.At
+.Dl \&.At III
 .Dl \&.At V.1
 .Pp
 See also
