--- a/share/man/man4/man4.sgi/dsclock.4
+++ b/share/man/man4/man4.sgi/dsclock.4
@@ -1,5 +1,5 @@
-.\"	$OpenBSD: dsclock.4,v 1.3 2007/05/31 19:19:56 jmc Exp $
-.\"	$NetBSD: dsclock.4,v 1.3 2004/02/10 16:35:50 wiz Exp $
+.\"	$OpenBSD$
+.\"	$NetBSD: dsclock.4,v 1.4 2008/04/30 13:10:56 martin Exp $
 .\"
 .\" Copyright (c) 2004 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -15,13 +15,6 @@
 .\" 2. Redistributions in binary form must reproduce the above copyright
 .\"    notice, this list of conditions and the following disclaimer in the
 .\"    documentation and/or other materials provided with the distribution.
-.\" 3. All advertising materials mentioning features or use of this software
-.\"    must display the following acknowledgement:
-.\"        This product includes software developed by the NetBSD
-.\"        Foundation, Inc. and its contributors.
-.\" 4. Neither the name of The NetBSD Foundation nor the names of its
-.\"    contributors may be used to endorse or promote products derived
-.\"    from this software without specific prior written permission.
 .\"
 .\" THIS SOFTWARE IS PROVIDED BY THE NETBSD FOUNDATION, INC. AND CONTRIBUTORS
 .\" ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
@@ -35,25 +28,19 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate$
 .Dt DSCLOCK 4 sgi
 .Os
 .Sh NAME
 .Nm dsclock
-.Nd DS1286 real-time clock
+.Nd DS1286 realtime clock
 .Sh SYNOPSIS
 .Cd "dsclock* at hpc0"
 .Sh DESCRIPTION
 The
 .Nm
-driver provides support for the DS1286 real-time clock (RTC).
+driver provides support for the DS1286 realtime clock.
 This device appears on SGI Indy and Indigo2 machines.
-Note that the kernel expects the RTC to run in UTC.
 .Sh SEE ALSO
-.Xr dpclock 4 ,
+.Xr hpc 4 ,
 .Xr intro 4
-.Sh HISTORY
-The
-.Nm
-driver first appeared in
-.Ox 3.6 .
