--- a/share/man/man4/man4.sgi/imc.4
+++ b/share/man/man4/man4.sgi/imc.4
@@ -1,5 +1,5 @@
-.\"	$OpenBSD: imc.4,v 1.2 2007/05/31 19:19:56 jmc Exp $
-.\"	$NetBSD: imc.4,v 1.3 2004/02/10 16:35:50 wiz Exp $
+.\"	$OpenBSD$
+.\"	$NetBSD: imc.4,v 1.8 2008/04/30 13:10:56 martin Exp $
 .\"
 .\" Copyright (c) 2002 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -15,13 +15,6 @@
 .\" 2. Redistributions in binary form must reproduce the above copyright
 .\"    notice, this list of conditions and the following disclaimer in the
 .\"    documentation and/or other materials provided with the distribution.
-.\" 3. All advertising materials mentioning features or use of this software
-.\"    must display the following acknowledgement:
-.\"        This product includes software developed by the NetBSD
-.\"        Foundation, Inc. and its contributors.
-.\" 4. Neither the name of The NetBSD Foundation nor the names of its
-.\"    contributors may be used to endorse or promote products derived
-.\"    from this software without specific prior written permission.
 .\"
 .\" THIS SOFTWARE IS PROVIDED BY THE NETBSD FOUNDATION, INC. AND CONTRIBUTORS
 .\" ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
@@ -35,14 +28,14 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate$
 .Dt IMC 4 sgi
 .Os
 .Sh NAME
 .Nm imc
 .Nd Indy Memory Controller and system controller
 .Sh SYNOPSIS
-.Cd "imc0 at mainbus0 addr 0x1fa00000"
+.Cd "imc0 at mainbus0"
 .Sh DESCRIPTION
 The Indy Memory Controller is responsible for acting as an interface from
 the
@@ -50,11 +43,9 @@ the
 bus to the main memory and CPU.
 The
 .Nm
-is found in the Indy and Indigo2 machines.
+is found in the Indigo R4k, Indy, Challenge S, Challenge M, and Indigo2
+machines.
 .Sh SEE ALSO
-.Xr gio 4
-.Sh HISTORY
-The
-.Nm
-driver first appeared in
-.Ox 3.6 .
+.Xr gio 4 ,
+.\" .Xr int 4 ,
+.Xr intro 4
