--- a/share/man/man4/man4.sgi/wdsc.4
+++ b/share/man/man4/man4.sgi/wdsc.4
@@ -1,5 +1,5 @@
-.\"	$OpenBSD: wdsc.4,v 1.3 2007/05/31 19:19:56 jmc Exp $
-.\" $NetBSD: wdsc.4,v 1.5 2004/02/10 16:55:43 wiz Exp $
+.\" $OpenBSD$
+.\" $NetBSD: wdsc.4,v 1.10 2009/03/09 19:24:30 joerg Exp $
 .\"
 .\" Copyright (c) 1999 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -15,13 +15,6 @@
 .\" 2. Redistributions in binary form must reproduce the above copyright
 .\"    notice, this list of conditions and the following disclaimer in the
 .\"    documentation and/or other materials provided with the distribution.
-.\" 3. All advertising materials mentioning features or use of this software
-.\"    must display the following acknowledgement:
-.\"        This product includes software developed by the NetBSD
-.\"        Foundation, Inc. and its contributors.
-.\" 4. Neither the name of The NetBSD Foundation nor the names of its
-.\"    contributors may be used to endorse or promote products derived
-.\"    from this software without specific prior written permission.
 .\"
 .\" THIS SOFTWARE IS PROVIDED BY THE NETBSD FOUNDATION, INC. AND CONTRIBUTORS
 .\" ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
@@ -35,39 +28,42 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
-.Os
+.Dd $Mdocdate$
 .Dt WDSC 4 sgi
+.Os
 .Sh NAME
 .Nm wdsc
-.Nd Western Digital WD33c93 SCSI Bus Interface Controller
+.Nd WD33c93 SCSI controller
 .Sh SYNOPSIS
 .Cd "wdsc* at hpc?"
 .Sh DESCRIPTION
 The
 .Nm
-driver provides an abstraction layer between the SCSI hardware
-found in multitudinous SGI machines (including Personal Iris series,
-Indigo, Indy, and Indigo2) and the machine independent SCSI drivers
-described in
-.Xr scsibus 4 .
+driver provides support for the Western Digital WD33c93 and WD33c93B SCSI
+controllers.
 .Pp
 In addition to sending the required SCSI commands to
 target devices on the SCSI bus, the
 .Nm
 driver deals with DMA, device interrupts, sync/async negotiation,
 and target disconnects/reconnects.
+.Sh DEVICE FLAGS
+.Bl -tag -width "Bits XX-XX" -compact
+.It Bits 0-7
+Disable disconnect/reselect for the corresponding target
+.It Bits 8-15
+Disable synchronous negotiation for target "[bit - 8]"
+.It Bits 16-23
+Disable tagged queuing for target "[bit - 16]"
+.El
+.Pp
+The
+.Nm
+device flags may be OR'd together to enable any combination of
+the features listed above.
+Tape devices should be allowed to disconnect for the SCSI bus to operate
+acceptably.
 .Sh SEE ALSO
 .Xr hpc 4 ,
+.Xr intro 4 ,
 .Xr scsibus 4
-.Sh HISTORY
-Wayne Knowles ported the sgi incarnation of the
-.Nm
-driver from the amiga and atari ports.
-It first appeared in
-.Ox 3.6 .
-.Sh BUGS
-The current
-.Nm
-driver should be blown away and replaced with a machine independent
-version as variants also exist in the amiga, atari, and mvme68k ports.
