--- a/share/man/man4/man4.sgi/hpc.4
+++ b/share/man/man4/man4.sgi/hpc.4
@@ -1,5 +1,5 @@
-.\"	$OpenBSD: hpc.4,v 1.2 2007/05/31 19:19:56 jmc Exp $
-.\"	$NetBSD: hpc.4,v 1.6 2004/02/10 16:55:43 wiz Exp $
+.\"	$OpenBSD$
+.\"	$NetBSD: hpc.4,v 1.12 2008/04/30 13:10:56 martin Exp $
 .\"
 .\" Copyright (c) 2002 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -15,13 +15,6 @@
 .\" 2. Redistributions in binary form must reproduce the above copyright
 .\"    notice, this list of conditions and the following disclaimer in the
 .\"    documentation and/or other materials provided with the distribution.
-.\" 3. All advertising materials mentioning features or use of this software
-.\"    must display the following acknowledgement:
-.\"        This product includes software developed by the NetBSD
-.\"        Foundation, Inc. and its contributors.
-.\" 4. Neither the name of The NetBSD Foundation nor the names of its
-.\"    contributors may be used to endorse or promote products derived
-.\"    from this software without specific prior written permission.
 .\"
 .\" THIS SOFTWARE IS PROVIDED BY THE NETBSD FOUNDATION, INC. AND CONTRIBUTORS
 .\" ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
@@ -35,7 +28,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate$
 .Dt HPC 4 sgi
 .Os
 .Sh NAME
@@ -43,38 +36,56 @@
 .Nd SGI High performance Peripheral Controller
 .Sh SYNOPSIS
 .Cd "hpc0 at gio0 addr 0x1fb80000"
+.Cd "hpc1 at gio0 addr 0x1fb00000"
+.Cd "hpc2 at gio0 addr 0x1fb98000"
+.\" .Cd "hpc3 at gio0 addr 0x1fb90000"
 .Sh DESCRIPTION
 .Nm
 interfaces the peripherals connected to it to the
 .Xr gio 4
 bus.
 .Nm
-is found on the Personal Iris 4D/3x, Indigo, Indy, and Indigo2 machines.
-.Sh HARDWARE
-.Bl -tag -width dsclock -offset indent
-.It dsclock
-DS1286-based RTC
-.It dpclock
-DP8573A-based RTC
-.It haltwo
-HAL2 audio controller
-.It sq
-Seeq 8003 and 80C03
-.Tn Ethernet
-controllers
-.It wdsc
-WD33c93
-.Tn SCSI
-controller
-.It zsc
+is found on the Indigo, Indy, Challenge S, Challenge M,
+and Indigo2 machines.
+.Pp
+There are three different numerical revisions of the
+.Nm
+controller.
+Revisions 1 and 1.5 exist on Indigo machines,
+as well as GIO32bis expansion cards such as the E++ SEEQ-based
+Ethernet adapter.
+Revision 1.5 supports bi-endian operation.
+Revision 3 exists on Indy, Challenge S, Indigo2, and Challenge M systems.
+It is possible to have an on-board HPC3 as well as HPC1.5-based
+GIO32bis adapters in the Indy and Challenge S systems.
+Additionally, the Challenge S may have a secondary HPC3 if the IOPLUS
+(a.k.a. ''mezzanine'') board is installed.
+.Sh LIST OF DEVICES
+The devices currently supported are:
+.Pp
+.Bl -tag -width 10n -offset 3n -compact
+.It Xr dsclock 4
+DS1286 realtime clock
+.It Xr dpclock 4
+DP8573A realtime clock
+.\" .It Xr haltwo 4
+.\" HAL2 audio controller
+.It Xr sq 4
+Seeq 8003/80C03 Ethernet controller
+.It Xr wdsc 4
+WD33c93 SCSI controller
+.It Xr zs 4
 Zilog Z8530 UART
 .El
 .Sh SEE ALSO
 .Xr gio 4 ,
 .Xr imc 4 ,
-.Xr pic 4
-.Sh HISTORY
-The
+.Xr intro 4
+.Sh BUGS
 .Nm
-driver first appeared in
-.Ox 3.6 .
+Revisions 1 and 1.5 support DMA buffer pointers of only 28 bits
+and may therefore only address 256 megabytes of memory.
+The R4k Indigo and Indy are the only systems that support sufficient
+memory to illustrate this drawback.
+A software workaround is not currently implemented.
+Revision 3, with 32 bit pointers, does not have this limitation.
