--- a/share/man/man4/man4.sgi/newport.4
+++ b/share/man/man4/man4.sgi/newport.4
@@ -1,5 +1,5 @@
-.\"	$OpenBSD: newport.4,v 1.3 2007/05/31 19:19:56 jmc Exp $
-.\"	$NetBSD: newport.4,v 1.4 2004/02/10 16:55:43 wiz Exp $
+.\"	$OpenBSD$
+.\"	$NetBSD: newport.4,v 1.6 2006/12/26 04:43:10 rumble Exp $
 .\"
 .\" Copyright (c) 2003 Ilpo Ruotsalainen
 .\" All rights reserved.
@@ -28,25 +28,38 @@
 .\"
 .\" <<Id: LICENSE_GC,v 1.1 2001/10/01 23:24:05 cgd Exp>>
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate$
 .Dt NEWPORT 4 sgi
 .Os
 .Sh NAME
 .Nm newport
-.Nd SGI NG1 graphics controller
+.Nd SGI Newport graphics
 .Sh SYNOPSIS
 .Cd "newport* at gio?"
 .Cd "wsdisplay* at newport?"
 .Sh DESCRIPTION
 The
 .Nm
-driver supports the SGI NG1 (a.k.a. Indy 8-bit, Indy 24-bit, and
-XL) graphics controllers, often found on Indy and Indigo2 machines.
+driver supports the SGI
+.Sq Newport
+series of graphics controllers, also known as
+.Sq Indy 8-bit ,
+.Sq Indy 24-bit,
+.Sq XGE
+and
+.Sq XL ,
+which may be found on Indy and Indigo2 systems.
 .Sh SEE ALSO
 .Xr gio 4 ,
-.Xr wscons 4
+.Xr grtwo 4 ,
+.Xr impact 4 ,
+.Xr light 4 ,
+.Xr wscons 4 ,
+.Xr wsdisplay 4
 .Sh HISTORY
 The
 .Nm
 driver first appeared in
-.Ox 3.6 .
+.Nx 2.0
+and was ported to
+.Ox 5.2 .
